--- a/index.html
+++ b/index.html
@@ -186,8 +186,20 @@
         </span>
       </a>
 
+      <a class="link" href="#" target="_blank" rel="noopener noreferrer">
+        <span class="icon" aria-hidden="true">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <path d="M3 12h18M3 6h18M3 18h18" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+          </svg>
+        </span>
+        <span class="txt">
+          <span class="label">Prices</span>
+          <span class="sub"> أستعراض الأسعار</span>
+        </span>
+      </a>
     </section>
 
   </main>
 </body>
+
 </html>
